Creación de nomrbe para titulo con h1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MI SEGUNDA PÁGINA</title>
 </head>
 <body>
+    <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
     
 </body>
 </html>
