--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
+    <h2>Nombre del estudiante:</h2>
+    <h3>Diego De Jesús Navarro Gómez</h3>
     
 </body>
 </html>
