Semestre del estudiante

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
     <h2>Nombre del estudiante:</h2>
     <h3>Diego De Jesús Navarro Gómez</h3>
+    <h2>Semestre que cursa:</h2>
+    <h3>Cuarto semestre</h3>
     
 </body>
 </html>
