Hobbies del estudiante

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <h3>Diego De Jesús Navarro Gómez</h3>
     <h2>Semestre que cursa:</h2>
     <h3>Cuarto semestre</h3>
+    <h2>Hobbies del estudiante:</h2>
+    <h3>
+        1. Jugar ajedrez
+        2. Ver Series/Cine
+        3. Escuchar música
+        4. Calistenia
+    </h3>
     
 </body>
 </html>
