--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <h2>Series favoritas del estudiante</h2>
     <h3>1. Shameless</h3>
     <img src="https://m.media-amazon.com/images/I/81kP5z5ntML._AC_UF894,1000_QL80_.jpg" alt="" style="width: 80%; max-width: 400px;">
+    <h3>2. Gambito de dama</h3>
+    <img src="https://images.justwatch.com/poster/239548192/s332/temporada-1" alt="" style="width: 80%; max-width: 400px;">
     
 </body>
 </html>
