--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <img src="https://m.media-amazon.com/images/I/81kP5z5ntML._AC_UF894,1000_QL80_.jpg" alt="" style="width: 80%; max-width: 400px;">
     <h3>2. Gambito de dama</h3>
     <img src="https://images.justwatch.com/poster/239548192/s332/temporada-1" alt="" style="width: 80%; max-width: 400px;">
+    <h4>3. The Big Bang Theory</h4>
+    <img src="https://static.wikia.nocookie.net/wiki-doblaje-espana/images/2/2a/Teor%C3%ADaBB.jpg/revision/latest/thumbnail/width/360/height/360?cb=20230919133338&path-prefix=es" alt="" style="width: 80%; max-width: 400px;">
     
 </body>
 </html>
