--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
 </head>
 <body>
     <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
+    <center>
     <h2>Nombre del estudiante:</h2>
     <h3>Diego De Jesús Navarro Gómez</h3>
     <h2>Semestre que cursa:</h2>
     <h3>Cuarto semestre</h3>
     <h2>Hobbies del estudiante:</h2>
-    <h3>
-        1. Jugar ajedrez
-        2. Ver Series/Cine
-        3. Escuchar música
-        4. Calistenia
-    </h3>
+        <h3>1. Jugar ajedrez</h3>
+        <h3>2. Ver Series/Cine</h3>
+        <h3>3. Escuchar música</h3>
+        <h3>4. Calistenia</h3>
     <h2>Series favoritas del estudiante</h2>
     <h3>1. Shameless</h3>
     <img src="https://m.media-amazon.com/images/I/81kP5z5ntML._AC_UF894,1000_QL80_.jpg" alt="" style="width: 80%; max-width: 400px;">
-    <h3>2. Gambito de dama</h3>
+    <h3>2. Gambito de Dama</h3>
     <img src="https://images.justwatch.com/poster/239548192/s332/temporada-1" alt="" style="width: 80%; max-width: 400px;">
-    <h4>3. The Big Bang Theory</h4>
+    <h3>3. The Big Bang Theory</h3>
     <img src="https://static.wikia.nocookie.net/wiki-doblaje-espana/images/2/2a/Teor%C3%ADaBB.jpg/revision/latest/thumbnail/width/360/height/360?cb=20230919133338&path-prefix=es" alt="" style="width: 80%; max-width: 400px;">
-    
+    <h3>4. The Office</h3>
+    <img src="https://m.media-amazon.com/images/M/MV5BZjQwYzBlYzUtZjhhOS00ZDQ0LWE0NzAtYTk4MjgzZTNkZWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="" style="width: 80%; max-width: 400px;">
+    </center>
 </body>
 </html>
