Cambio de imagen de big bang porque no se veia

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h3>2. Gambito de Dama</h3>
     <img src="https://images.justwatch.com/poster/239548192/s332/temporada-1" alt="" style="width: 80%; max-width: 400px;">
     <h3>3. The Big Bang Theory</h3>
-    <img src="https://static.wikia.nocookie.net/wiki-doblaje-espana/images/2/2a/Teor%C3%ADaBB.jpg/revision/latest/thumbnail/width/360/height/360?cb=20230919133338&path-prefix=es" alt="" style="width: 80%; max-width: 400px;">
+    <img src="https://m.media-amazon.com/images/M/MV5BZjgzY2QyNzItNDhhYi00ZWIwLWFjN2UtZDJkN2MxYWNjMmJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="" style="width: 80%; max-width: 400px;">
     <h3>4. The Office</h3>
     <img src="https://m.media-amazon.com/images/M/MV5BZjQwYzBlYzUtZjhhOS00ZDQ0LWE0NzAtYTk4MjgzZTNkZWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="" style="width: 80%; max-width: 400px;">
     </center>
